--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,9 @@ php:
  - '5.6'
  - '7.0'
 
+before_script:
+  - composer self-update
+  - composer install --no-interaction
+
 script:
  - vendor/bin/phpunit
