--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,10 @@ php:
  - '7.0'
 
 before_script:
-  - composer self-update
-  - composer install --no-interaction
+ - composer self-update
+ - composer install --no-interaction
+ - cd ./Travis-project
+ - composer update
 
 script:
  - vendor/bin/phpunit
