--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ before_script:
  - composer self-update
  - composer install --no-interaction
  - composer update
+ - php artisan key:generate
 
 script:
  - ./vendor/bin/phpunit
